<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">TrAUMa</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="address">Address</string>
    <string name="description">Description</string>
    <string name="delete_marker">Delete Marker</string>
    <string name="save_marker">Save Marker</string>
    <string name="fail">Failure!</string>
    <string name="success">Success!</string>
    <string name="wrong_editing">Something went wrong during the editing process.\nError code:</string>
    <string name="good_editing">The Marker was successfully edited.</string>
    <string name="wrong_delete">Something went wrong upon deleting the Marker.\nError code:</string>
    <string name="good_delete">The Marker was successfully deleted.</string>
    <string name="server_error">An error occurred while communicating with the server</string>
    <string name="addmarker">Add Marker</string>
    <string name="cancel">Cancel</string>
    <string name="good_adding">Marker successfully added</string>
    <string name="wrong_adding">There was an error while placing the Marker</string>
    <string name="satview">Satellite view</string>
    <string name="mapview">Map view</string>
    <string name="exit">Exit TrAUMa</string>
</resources>
